--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,9 @@ body {
 	margin: 0;
 	padding: 0;
 
+	color: var(--black);
+	background: #F5F6F8;
+
 	font-family: "Noto Sans Display", sans-serif;
 }
 
@@ -14,4 +17,19 @@ a {
 
 * {
 	box-sizing: border-box;
+}
+
+:root {
+	--black: #3B434E;
+	--gray-light: #EBEBEB;
+	--gray: #A4A4A4;
+	--gray-dark: #6C7077;
+	--white: white;
+	--primary: #7351F5;
+	--primary-hover: #6344DF;
+	--red-light: #FEA291;
+	--red: #FC836D;
+	--green: #007B48;
+	--green-light: #C8F8E4;
+	--font-family: "Noto Sans KR", sans-serif;
 }
