--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -1,23 +1,40 @@
 .wrapper {
-    display: grid;
-    grid-template-columns: auto 230px minmax(320px, 1200px) auto;
-    grid-template-rows: auto 1fr auto;
-    grid-template-areas: 
+  display: grid;
+  grid-template-columns: auto 230px minmax(320px, 1200px) auto;
+  grid-template-rows: auto 1fr auto;
+  grid-template-areas:
     ". header header ."
     ". sidebar body ."
     "footer footer footer footer";
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 .header {
-    grid-area: header;
+  grid-area: header;
+  display: none;
 }
 .sidebar {
-    grid-area: sidebar;
+  grid-area: sidebar;
 }
 .body {
-    grid-area: body;
+  grid-area: body;
 }
 .footer {
-    grid-area: footer;
+  grid-area: footer;
+}
+
+@media (max-width: 765px) {
+  .wrapper {
+    grid-template-columns: minmax(320px, 1fr);
+    grid-template-areas:
+      "header"
+      "body"
+      "footer";
+  }
+  .sidebar {
+    display: none;
+  }
+  .header {
+    display: block;
+  }
 }
